Fix field boxes display on mobile for PD Search form

--- a/themes/evolve/lessc/PD/PD.less
+++ b/themes/evolve/lessc/PD/PD.less
@@ -1201,9 +1201,16 @@ body.page-node{
 
 
 
-#block-block-240 .form-control{
-    background-color:transparent!important;
-	border: 1px solid white!important;
+#block-block-240{
+    .form-control{
+        background-color:transparent!important;
+        border: 1px solid white!important;
+    }
+    form{
+        input[type="text"]{
+            min-height: 37px;
+        }
+    }
 }
 
 #block-block-241 table th{
